# hello_neon_dwc

./: local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  dw.h  helloneon.c  interface.cpp  interface.h  types.h
